comp_out7.txt

> Task :compileJava FAILED
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:9: error: cannot find symbol
    private final AresFollower follower;
                  ^
  symbol:   class AresFollower
  location: class org.areslib.command.FollowPathCommand
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:14: error: cannot find symbol
    public FollowPathCommand(AresFollower follower, Path path) {
                             ^
  symbol:   class AresFollower
  location: class org.areslib.command.FollowPathCommand
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:18: error: cannot find symbol
    public FollowPathCommand(AresFollower follower, Path path, boolean holdEnd) {
                             ^
  symbol:   class AresFollower
  location: class org.areslib.command.FollowPathCommand
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:25: error: cannot find symbol
    public FollowPathCommand(AresFollower follower, PathChain pathChain) {
                             ^
  symbol:   class AresFollower
  location: class org.areslib.command.FollowPathCommand
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:29: error: cannot find symbol
    public FollowPathCommand(AresFollower follower, PathChain pathChain, boolean holdEnd) {
                             ^
  symbol:   class AresFollower
  location: class org.areslib.command.FollowPathCommand
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
